@@ -8,9 +8,9 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import lombok.RequiredArgsConstructor;
+import store.novabook.store.exception.EntityNotFoundException;
 import store.novabook.store.point.entity.PointHistory;
 import store.novabook.store.point.repository.PointHistoryRepository;
-import store.novabook.store.point.repository.PointPolicyRepository;
 import store.novabook.store.user.member.dto.CreateMemberRequest;
 import store.novabook.store.user.member.dto.GetMemberResponse;
 import store.novabook.store.user.member.entity.Member;
@@ -18,7 +18,6 @@ import store.novabook.store.user.member.entity.MemberGrade;
 import store.novabook.store.user.member.entity.MemberStatus;
 import store.novabook.store.user.member.entity.Users;
 import store.novabook.store.user.member.exception.MemberAlreadyExistsException;
-import store.novabook.store.user.member.exception.MemberNotFoundException;
 import store.novabook.store.user.member.repository.MemberGradeRepository;
 import store.novabook.store.user.member.repository.MemberRepository;
 import store.novabook.store.user.member.repository.MemberStatusRepository;
@@ -29,19 +28,28 @@ import store.novabook.store.user.member.repository.UsersRepository;
 @Transactional
 public class MemberService {
 
+	public static final String COMMON = "일반";
+	public static final String ACTIVE = "활동";
+
 	private final MemberRepository memberRepository;
 	private final UsersRepository usersRepository;
 	private final PointHistoryRepository pointHistoryRepository;
 	private final MemberGradeRepository memberGradeRepository;
 	private final MemberStatusRepository memberStatusRepository;
-	private final PointPolicyRepository pointPolicyRepository;
 
 	public Member createMember(CreateMemberRequest createMemberRequest) {
+
 		Users user = Users.builder().type(1).build();
 		usersRepository.save(user);
 
-		MemberGrade memberGrade = memberGradeRepository.findByName("일반");
-		MemberStatus memberStatus = memberStatusRepository.findByName("활동");
+		MemberGrade memberGrade = memberGradeRepository.findByName(COMMON);
+		if (memberGrade == null) {
+			throw new EntityNotFoundException(memberGrade.getId());
+		}
+		MemberStatus memberStatus = memberStatusRepository.findByName(ACTIVE);
+		if (memberStatus == null) {
+			throw new EntityNotFoundException(memberStatus.getId());
+		}
 
 		Member member = Member.builder()
 			.users(user)
@@ -57,10 +65,13 @@ public class MemberService {
 			.latestLoginAt(LocalDateTime.now())
 			.build();
 
-		validateId(member.getId());
-		Member savedMember = memberRepository.save(member);
+		/*validateId(member.getId());*/
+		if (memberRepository.existsByLoginId(createMemberRequest.loginId())) {
+			throw new MemberAlreadyExistsException(member.getId());
+		}
+		return memberRepository.save(member);
 
-		PointHistory pointHistory = new PointHistory(
+		/*PointHistory pointHistory = new PointHistory(
 			null,
 			null,
 			null,
@@ -69,9 +80,8 @@ public class MemberService {
 			5000,
 			LocalDateTime.now(),
 			null);
-		pointHistoryRepository.save(pointHistory);
+		pointHistoryRepository.save(pointHistory);*/
 
-		return savedMember;
 	}
 
 	@Transactional(readOnly = true)
@@ -80,47 +90,42 @@ public class MemberService {
 		return memberList.stream()
 			.map(member -> new GetMemberResponse(member.getId(), member.getLoginId(), member.getName(),
 				member.getEmail()))
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	@Transactional(readOnly = true)
 	public GetMemberResponse getMember(Long memberId) {
-		Member member = memberRepository.findById(memberId).orElse(null);
-		if (member != null) {
-			return new GetMemberResponse(
-				member.getId(),
-				member.getLoginId(),
-				member.getName(),
-				member.getEmail());
-		}
-		throw new MemberNotFoundException();
+		Member member = memberRepository.findById(memberId).orElseThrow(() -> new EntityNotFoundException(memberId));
+
+		return new GetMemberResponse(
+			member.getId(),
+			member.getLoginId(),
+			member.getName(),
+			member.getEmail());
+
 	}
 
 	public void updateMember(Long memberId, CreateMemberRequest createMemberRequest) {
-		Member member = memberRepository.findById(memberId).orElse(null);
-		if (member != null) {
-			member.update(createMemberRequest.loginId(), createMemberRequest.loginPassword(),
-				createMemberRequest.name(), createMemberRequest.number(), createMemberRequest.email(),
-				createMemberRequest.birth());
+		Member member = memberRepository.findById(memberId).orElseThrow(() -> new EntityNotFoundException(memberId));
 
-			memberRepository.save(member);
-		}
-		throw new MemberNotFoundException();
+		member.update(createMemberRequest.loginId(), createMemberRequest.loginPassword(),
+			createMemberRequest.name(), createMemberRequest.number(), createMemberRequest.email(),
+			createMemberRequest.birth());
+
+		memberRepository.save(member);
+
 	}
 
 	public void deleteMember(Long memberId) {
-		Member member = memberRepository.findById(memberId).orElse(null);
-		if (member != null) {
-			memberRepository.delete(member);
-		}
-		throw new MemberNotFoundException();
+		Member member = memberRepository.findById(memberId).orElseThrow(() -> new EntityNotFoundException(memberId));
+		memberRepository.delete(member);
 	}
 
-	private void validateId(Long id) {
+/*	private void validateId(Long id) {
 		if (memberRepository.existsById(id)) {
 			throw new MemberAlreadyExistsException(id);
 		}
-	}
+	}*/
 
 }
 
